--- a/index.html
+++ b/index.html
@@ -1,17 +1,45 @@
 <html>
 
 <head>
+    <!-- done differently in the latest version -->
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 
 </head>
 
 <body>
+    <!-- you can see all the beginings of react here -->
     <div id='app'></div>
     <script>
         const app = document.querySelector('#app');
         console.log(app);
 
+        class App extends React.Component {
+            render() {
+                return React.createElement(
+                    'div',
+                    null,
+                    React.createElement(
+                        'h2',
+                        null,
+                        `Count is ${items.length}`
+                    ),
+                    React.createElement(
+                        'ul',
+                        null,
+                        items.map((item, idx) => React.createElement('li', { key: idx }, item))
+                    )
+                );
+            }
+        }
+
         const items = [1, 2];
 
+        // so this is the magic that gabs our one html root 
+        // component and attached the react components to it
+        ReactDOM.render(React.createElement(App), app);
+
+        /*
         const render = () => {
             const html = `
             <div>
@@ -40,7 +68,7 @@
                 clearInterval(interval);
             }
         }, 500)
-
+        */
     </script>
 
 </body>
